      improved and is now twice faster with a single core, and 4-5
      times faster with mc.cores = 2.

    o keep.tip() gains a '...' argument which is passed to drop.tip().
      The behaviour of the latter is changed so that node labels, if
      available, are used to create new tip labels when subtree = TRUE
      (see PR #90 on GitHub).


BUG FIXES

    o rtt() was fixed when dates include NAs (issue #73 on GitHub).

    o njs(), bionj(), bionjs(), fastme.bal(), and fastme.ols() now
      check that there are least three observations in the distance
      matrix (issue #84 on GitHub).

    o nodelabels(, frame = "circle") used to ignore the argument
      'adj'. This is fixed (issue #85 on GitHub).


OTHER CHANGES

    o .uncompressTipLabel() now returns an object of the same class
      than the input object (previously the returned object was always
      of class "multiPhylo").

    o The help page of is.binary() has been clarified that branch
      lengths are ignored (issue #83 on GitHub).

    o dist.nodes() has an improved internal C code with unlimited tree
      size. The code is three times faster with small trees; twice
      faster with ~1000 tips (the gain is less with bigger trees).



		CHANGES IN APE VERSION 5.7-1


BUG FIXES

    o Some very unbalanced trees resulted in a segfault (see issue #70
      on GitHub).


OTHER CHANGES

    o ape 5.7 introduced an implicit dependence on R >= 4.1. This has
      been corrected and this version should work with R >= 3.4 (and
      certainly with R >= 3.2).

    o All examples should now write files in the TMP directory (some
      still used to do this in the user's working directory).



		CHANGES IN APE VERSION 5.7


NEW FEATURES

    o The new function muscle5 calls MUSCLE5. There are two other new
      functions that depend on this program, efastats and letterconf,
      to compute summaries for a set of alternative alignments and
      display the confidence in each site in HTML, respectively.