@@ -1,6 +1,6 @@
 Package: ape
-Version: 5.7-1.2
-Date: 2023-07-13
+Version: 5.7-1.3
+Date: 2023-09-03
 Title: Analyses of Phylogenetics and Evolution
 Authors@R: c(person("Emmanuel", "Paradis", role = c("aut", "cre", "cph"), email = "Emmanuel.Paradis@ird.fr", comment = c(ORCID = "0000-0003-3092-2199")),
   person("Simon", "Blomberg", role = c("aut", "cph"), comment = c(ORCID = "0000-0003-1062-0839")),
