@@ -14,6 +14,10 @@ NEW FEATURES
       available, are used to create new tip labels when subtree = TRUE
       (see PR #90 on GitHub).
 
+    o nj() can now handle distances stored in long vectors. There was
+      previously an implicit limit to 46,341 observations (see PR #97
+      on GitHub).
+
 
 BUG FIXES
 
